fix(header): allow custom link to work properly out of the box
due to the inability to tweak the stencil <Host /> we need to embedded an achor tag and then the
children. This will have some consequences on the custom link usage as styles needs to "know" about
this structure.

--- a/packages/header-component/src/components/dc-header/styles/link.scss
+++ b/packages/header-component/src/components/dc-header/styles/link.scss
@@ -1,3 +1,12 @@
 dc-link {
   cursor: pointer;
+
+  a:any-link,
+  a:-webkit-any-link {
+    color: inherit;
+  }
+
+  > a {
+    display: inline-block;
+  }
 }
